--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "dev": "electron-webpack dev",
     "compile": "electron-webpack",
     "postinstall": "electron-builder install-app-deps",
-    "build": "electron-builder --mac --windows --linux",
-    "release": "electron-builder --mac --windows --linux --publish always"
+    "build": "electron-builder --windows",
+    "release": "electron-builder --windows --publish always"
   },
   "dependencies": {
     "electron-updater": "^4.3.9",
